# gocv

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  gocv.go  gocv_build.go  gocv_dynamic.go  gui.go  imgcodec.go  imgproc.go  mat.go  utils.go
example/: main.go
stdccv/: c_helper.h  cgo.go  cv_core.h  cv_gui.cpp  cv_gui.h  cv_imgcodecs.cpp  cv_imgcodecs.h  cv_imgproc.cpp  cv_imgproc.h  cv_mat.cpp  cv_mat.h
